--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
     box-sizing: border-box;
 }
 
+
+
 /* properties */
 
 :root {
@@ -72,11 +74,11 @@
 
 .box-1-big{
     width: 100%;
-    min-height: 200px;
+    min-height: 100px;
     margin-top: 10px;
     background-color: rgb(177, 212, 235);
     border-radius: 20px;
-    text-align: center; 
+    text-align: center;
 }
 
 .box-1-big button{
@@ -127,6 +129,7 @@
 .box-2{
     width: 100%;
     min-height: 200px;
+    margin-bottom: 50px;
     margin-top: 10px;
     background-color: rgb(166, 143, 220);
     color: #ffffff;
@@ -158,6 +161,84 @@
 }
 
 
+/* div-3 */
+
+.sfondo-3{
+    width: 100%;
+    padding: 10px;
+    min-width: 400px;
+
+}
+
+.titolo-3{
+    text-align: center;
+    margin-top: 50px;
+    min-width: 400px;
+}
+.titolo-3>* {
+    padding-bottom: 30px;
+}
+
+.container-3{
+    text-align: center;
+}
+
+.box-3-a{
+    border-radius: 20px;
+    padding: 10px;
+    margin-bottom: 30px;
+    background-color: rgb(0, 94, 255);
+    width: 100%;
+    text-align: center;
+
+
+
+}
+
+
+
+.img-3{
+    width: 100%;
+    height: 200px;
+
+}
+
+.img-3 img{
+    width: 200px;
+    height: 100%;
+    border-radius: 50%;
+    
+}
+
+.testo-3{
+    width: 100%;
+    text-align: center;
+    background-color: rgb(127, 176, 255);
+    display: flex;
+    justify-content: center;
+
+}
+.testo-3> *{
+    width: 200px;
+}
+
+/* div-4 */
+
+.container-4{
+    margin: 0 7%;
+    height: 100%;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    min-width: 400px;
+    border: 1px black dashed;
+
+}
+
+
+
+
+
 /* media */
 
 @media screen and (min-width: 768px) {
@@ -177,6 +258,46 @@
     .box-1{
         width: calc(95% / 3 );
     }
+    .big-testo{
+        margin-left: 20px;
+    }
+    /* div-3 */
+    .box-3-a{
+        display: flex;
+        align-items: center;
+    }
+    .img-3{
+        width: 200px;
+        height: 200px;
     
+    }
+    .testo-3{
+        margin: 10px;
+        width: 100%;
+        text-align: left;
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+        padding: 10px;
+
+    }
+    .testo-3> *{
+        width: 100%;
+    }
+
 }
 
+@media screen and (min-width: 922px) {
+    /* div-1 */
+    .box-1-big{
+        display: flex;
+        
+    }
+
+    .box-1-big .big-img{
+        width: 200%;
+        
+    }
+    
+
+}
