--- a/css/style.css
+++ b/css/style.css
@@ -224,17 +224,38 @@
 
 /* div-4 */
 
-.container-4{
-    margin: 0 7%;
-    height: 100%;
-    padding: 10px;
-    display: flex;
-    flex-wrap: wrap;
-    min-width: 400px;
-    border: 1px black dashed;
+.sfondo-4{
+    background-color: rgb(166, 143, 220);
+    padding: 20px;
 
 }
 
+h2{
+    text-align: center;
+    padding: 30px 0;
+    background-color: rgb(166, 143, 220);
+}
+
+.container-4{
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 10px;
+    border-radius: 25px;
+    background-color: #ffffff;
+
+}
+.container-4> *{
+    padding: 10px;
+    margin-bottom: 20px;
+}
+.container-4 .testo-4{
+    font-size: 40px;
+}
+.container-4 div button{
+    padding: 10px 15px;
+    background-color: rgb(166, 143, 220);
+    border-radius: 25px;
+}
 
 
 
@@ -284,6 +305,16 @@
     .testo-3> *{
         width: 100%;
     }
+    /* div-4 */
+    .sfondo-4{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .container-4{
+        width: calc(100% / 2 - 15px);
+
+    }
 
 }
 
@@ -297,6 +328,16 @@
     .box-1-big .big-img{
         width: 200%;
         
+    }
+     /* div-4 */
+    .sfondo-4{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .container-4{
+        width: calc(100% / 3 - 15px);
+    
     }
     
 
