--- a/css/style.css
+++ b/css/style.css
@@ -154,12 +154,16 @@
 .box-2-d{
     padding: 15px;
 }
-.box-2-d button{
+.box-2-button button{
+
     background-color: rgb(166, 143, 220);
     padding: 20px;
     border-radius: 100%;
 }
 
+.testo-2{
+    background-color: #ffffff;
+}
 
 /* div-3 */
 
@@ -230,7 +234,7 @@
 
 }
 
-h2{
+.benefits{
     text-align: center;
     padding: 30px 0;
     background-color: rgb(166, 143, 220);
@@ -328,6 +332,19 @@ h2{
     .box-1-big .big-img{
         width: 200%;
         
+    }
+    /* div-2 */
+    .container-2{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .box-2{
+        width: calc(50% - 20px);
+        max-width: 450px;
+    }
+    .box-2:last-of-type{
+        margin-top: 100px;
     }
      /* div-4 */
     .sfondo-4{
