--- a/css/style.css
+++ b/css/style.css
@@ -34,15 +34,29 @@
 .box-header-a{
     height: 50px;
     min-width: 100px;
-    border: 1px black dashed;
+    margin-top: 30px;
 
 }
 
 .box-header-b{
     height: 50px;
-    min-width: 100px;
-    border: 1px black dashed;
+    width: 100px;
+    margin-top: 30px;
 
+
+}
+.box-header-b img{
+    width: 100%;
+    height: 100%;
+}
+
+.box-header-ba button{
+    padding: 5px;
+    border-radius: 20px;
+
+}
+.box-header-ba a{
+    color: aliceblue;
 }
 
 /* main */
@@ -304,7 +318,29 @@
 }
 
 
+/* footer */
 
+.container-footer{
+    width: 100%;
+    min-height: 300px;
+    background-color: #212020;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box-footer{
+    width: 50%;
+    height: 200px;
+}
+
+.box-footer> *{
+    color: #ffffff;
+    
+}
+.testo-footer1{
+    padding-bottom: 50px;
+}
 
 
 
@@ -373,15 +409,19 @@
     }
 
     .container-5-a{
-        width: calc(55% - 20px);
+        width: calc(55% - 30px);
     }
     .container-5-b{
-        width: calc(35% - 20px);
+        width: calc(35% - 30px);
     }
 
 }
 
 @media screen and (min-width: 922px) {
+    /* header */
+    .box-header-b{
+        display: none;
+    }
     /* div-1 */
     .box-1-big{
         display: flex;
@@ -421,4 +461,10 @@
     }
     
 
+}
+
+@media screen and (max-width: 922px){
+    .box-header-ba{
+        display: none;
+    }
 }
